--- a/.github/ISSUE_TEMPLATE/poop_report.yml
+++ b/.github/ISSUE_TEMPLATE/poop_report.yml
@@ -3,59 +3,68 @@ description: Report an error, crash or weird ass behavior
 title: "[BUG] "
 labels: "bug"
 body:
-  - type: markdown
-    attributes:
-      value: |
-        Thanks for taking the time to fill out this bug report!
-  - type: input
-    id: contact
-    attributes:
-      label: Contact Details
-      description: How can we get in touch with you if we need more info?
-      placeholder: ex. email@example.com
-    validations:
-      required: false
-  - type: textarea
-    id: what-happened
-    attributes:
-      label: What happened?
-      description: Also tell us, what did you expect to happen?
-      placeholder: Tell us what you see!
-      value: "A bug happened!"
-    validations:
-      required: true
-  - type: dropdown
-    id: version
-    attributes:
-      label: Version
-      description: What version of our software are you running?
-      options:
-        - 1.0.2 (Default)
-        - 1.0.3 (Edge)
-      default: 0
-    validations:
-      required: true
-  - type: dropdown
-    id: browsers
-    attributes:
-      label: What browsers are you seeing the problem on?
-      multiple: true
-      options:
-        - Firefox
-        - Chrome
-        - Safari
-        - Microsoft Edge
-  - type: textarea
-    id: logs
-    attributes:
-      label: Relevant log output
-      description: Please copy and paste any relevant log output. This will be automatically formatted into code, so no need for backticks.
-      render: shell
-  - type: checkboxes
-    id: terms
-    attributes:
-      label: Code of Conduct
-      description: By submitting this issue, you agree to follow our [Code of Conduct](https://example.com). 
-      options:
-        - label: I agree to follow this project's Code of Conduct
-          required: true
+
+	- type: markdown
+			attributes:
+				value: Report an error, crash or weird ass behavior
+
+	- type: dropdown
+			attributes:
+				label: Report Category
+				options:
+				- Weird Shit
+				- Warning
+				- Error
+				- Crash
+				- Corruption
+				- Security
+			validations:
+				required: true
+
+	- type: input
+			attributes:
+				label: Description
+				description: What's happening that you think should not happen?
+				placeholder: Player is walking funny
+			validations:
+				required: true
+
+	- type: input
+			attributes:
+				label: Expected Behavior
+				description: What do you think should happen instead?
+				placeholder: Player should walk cool
+			validations:
+				required: true
+
+	- type: input
+			attributes:
+				label: Godot Version
+				description: "**Comedot is always developed for the latest Godot beta version**, sometimes compiled directly from the master source branch. Which version are you using?"
+				placeholder: 6.9
+			validations:
+				required: true
+
+	- type: checkboxes
+			attributes:
+				label: "Is the code or feature you're trying to use marked `@experimental`?"
+				description: That means there are no guarantees about it and it has a very low priority of getting fixed.
+				options:
+					label: "`@experimental`"
+
+	- type: textarea
+			attributes:
+			label: Reproduction steps
+			description: "How do you trigger this bug? Please walk us through it step by step."
+			value: |
+				1.
+				2.
+				3.
+				...
+    	render: gdscript
+
+	- type: textarea
+			attributes:
+				label: Godot Output Log
+				description: Enable "Show Debug Info" on the relevant entities/components, and copy any relevant log text from the Output panel of the Godot Editor.
+			render: shell
