--- a/.github/ISSUE_TEMPLATE/poop_report.yml
+++ b/.github/ISSUE_TEMPLATE/poop_report.yml
@@ -6,7 +6,8 @@ body:
 
   - type: markdown
       attributes:
-        value: Report an error, crash or weird ass behavior
+        value: |
+          Report an error, crash or weird ass behavior
 
   - type: dropdown
       attributes:
