--- a/.github/ISSUE_TEMPLATE/poop_report.yml
+++ b/.github/ISSUE_TEMPLATE/poop_report.yml
@@ -7,3 +7,16 @@ body:
   - type: markdown
     attributes:
       value: Report an error, crash or weird ass behavior
+
+  - type: dropdown
+      attributes:
+        label: Report Category
+        options:
+        - Weird Shit
+        - Warning
+        - Error
+        - Crash
+        - Corruption
+        - Security
+      validations:
+        required: true
