--- a/.github/ISSUE_TEMPLATE/poop_report.yml
+++ b/.github/ISSUE_TEMPLATE/poop_report.yml
@@ -3,60 +3,21 @@ description: Report an error, crash or weird ass behavior
 title: "[BUG] "
 labels: "bug"
 body:
+
   - type: markdown
     attributes:
       value: Report an error, crash or weird ass behavior
+
   - type: dropdown
     attributes:
       label: Report Category
       options:
-      - Weird Shit
-      - Warning
-      - Error
-      - Crash
-      - Corruption
-      - Security
+        - Weird Shit
+        - Warning
+        - Error
+        - Crash
+        - Corruption
+        - Security
+        default: 0
     validations:
       required: true
-  - type: input
-    attributes:
-      label: Description
-      description: What's happening that you think should not happen?
-      placeholder: Player is walking funny
-    validations:
-      required: true
-  - type: input
-    attributes:
-      label: Expected Behavior
-      description: What do you think should happen instead?
-      placeholder: Player should walk cool
-    validations:
-      required: true
-  - type: input
-    attributes:
-      label: Godot Version
-      description: "**Comedot is always developed for the latest Godot beta version**, sometimes compiled directly from the master source branch. Which version are you using?"
-      placeholder: 6.9
-    validations:
-      required: true
-  - type: checkboxes
-    attributes:
-      label: "Is the code or feature you're trying to use marked `@experimental`?"
-      description: That means there are no guarantees about it and it has a very low priority of getting fixed.
-      options:
-        label: "`@experimental`"
-  - type: textarea
-    attributes:
-    label: Reproduction steps
-    description: "How do you trigger this bug? Please walk us through it step by step."
-    value: |
-      1.
-      2.
-      3.
-      ...
-    render: gdscript
-  - type: textarea
-    attributes:
-      label: Godot Output Log
-      description: Enable "Show Debug Info" on the relevant entities/components, and copy any relevant log text from the Output panel of the Godot Editor.
-    render: shell
