--- a/.github/ISSUE_TEMPLATE/poop_report.yml
+++ b/.github/ISSUE_TEMPLATE/poop_report.yml
@@ -12,12 +12,28 @@ body:
     attributes:
       label: Report Category
       options:
-        - Weird Shit
+        - "Weird Shit"
         - Warning
         - Error
         - Crash
         - Corruption
         - Security
         default: 0
+    validations:
+      required: true
+
+  - type: input
+    attributes:
+      label: Description
+      description: What's happening that you think should not happen?
+      placeholder: Player is walking funny
+    validations:
+      required: true
+
+  - type: input
+    attributes:
+      label: Expected Behavior
+      description: What do you think should happen instead?
+      placeholder: Player should walk cool
     validations:
       required: true
