--- a/.github/ISSUE_TEMPLATE/poop_report.yml
+++ b/.github/ISSUE_TEMPLATE/poop_report.yml
@@ -22,3 +22,27 @@ body:
       default: 0
     validations:
       required: true
+
+  - type: input
+    attributes:
+      label: Description
+      description: What's happening that you think should not happen?
+      placeholder: Player is walking funny
+    validations:
+      required: true
+
+  - type: input
+    attributes:
+      label: Expected Behavior
+      description: What do you think should happen instead?
+      placeholder: Player should walk cool
+    validations:
+      required: true
+
+  - type: input
+    attributes:
+      label: Godot Version
+      description: "**Comedot is always developed for the latest Godot beta version**, sometimes compiled directly from the master source branch. Which version are you using?"
+      placeholder: 6.9
+    validations:
+      required: true
