--- a/.github/ISSUE_TEMPLATE/poop_report.yml
+++ b/.github/ISSUE_TEMPLATE/poop_report.yml
@@ -52,4 +52,21 @@ body:
       label: "Is the code or feature you're trying to use marked `@experimental`?"
       description: That means there are no guarantees about it and it has a very low priority of getting fixed.
       options:
-        label: "`@experimental`"
+        - label: "`@experimental`"
+
+  - type: textarea
+    attributes:
+    label: Reproduction steps
+    description: "How do you trigger this bug? Please walk us through it step by step."
+    value: |
+      1.
+      2.
+      3.
+      ...
+    render: gdscript
+
+  - type: textarea
+    attributes:
+      label: Godot Output Log
+      description: Enable "Show Debug Info" on the relevant entities/components, and copy any relevant log text from the Output panel of the Godot Editor.
+    render: shell
