--- a/.github/ISSUE_TEMPLATE/poop_report.yml
+++ b/.github/ISSUE_TEMPLATE/poop_report.yml
@@ -58,15 +58,34 @@ body:
     attributes:
       label: How to recreate?
       description: List the exact steps to see this bug
-      value: |
-        1.
-        2.
-        3.
-        ...
+      placeholder: |
+        1. Start with a new copy of the Comedot repository
+        2. Edit or create this scene/node: …
+        3. Add the following script/code: …
+        5. Play the scene and perform these actions: …
+        6. If it's a crash or error, include the file and line number: …
       render: gdscript
 
   - type: textarea
     attributes:
       label: Godot Output Log
-      description: Enable "Show Debug Info" on the relevant entities/components, and copy any relevant log text from the Output panel of the Godot Editor.
-      render: shell
+      description: Enable "Show Debug Info" on the relevant Entities/Components, and copy any relevant log text from the Output panel of the Godot Editor.
+      render: gdscript
+
+  - type: dropdown
+    attributes:
+      label: Your Coomputer
+      description: Which operating system are you testing your game on?
+      options:
+        - Doesn't Matter
+        - Linux
+        - macOS
+        - Windows
+        - Web
+      default: 0
+    
+  - type: input
+    attributes:
+      label: What's your favorite anime?
+      description: This will decide if we can be friends.
+      placeholder: Ranma ½
